tests/snapshots/ui_tests__snapshot_batch_info_in_status.snap
---
source: tests/ui_tests.rs
assertion_line: 493
expression: output
---
┌ Processes ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│web [Stopped] | worker [Stopped]                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Logs  (Batch 1/3, 3 lines)───────────────────────────────────────────────────────────────────────────────────────────┐
│[12:00:00] web: Starting web server on port 3000                                                                      │
│[12:00:00] web: Loading configuration                                                                                 │
│[12:00:00] web: Database connected                                                                                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Press : for commands, / to search, q to quit                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
