tests/snapshots/ui_tests__snapshot_batch_navigation_second_batch.snap
---
source: tests/ui_tests.rs
expression: output
---
 Processes                                                                                                              
web [Stopped] | worker [Stopped]                                                                                        
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 Logs  Buffer: 0.0/50 MB (0%) | 6 lines (Batch 2/3, 2 lines)  [0%]                                                      
[12:00:00] worker: Processing job #1234                                                                                 
[12:00:00] worker: Job #1234 completed                                                                                  
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Press : for commands, / to search, q to quit                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
