tests/snapshots/ui_tests__snapshot_batch_view_mode.snap
---
source: tests/ui_tests.rs
expression: output
---
┌ Processes ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│web [Stopped] | worker [Stopped]                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Logs  Buffer: 0.0/50 MB (0%) | 6 lines (Batch 1/3, 3 lines)──────────────────────────────────────────────────────────┐
│[12:00:00] web: Starting web server on port 3000                                                                      │
│[12:00:00] web: Loading configuration                                                                                 │
│[12:00:00] web: Database connected                                                                                    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Press : for commands, / to search, q to quit                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
